# MotorcycleSpeedometer

./: .gitignore  README.md
MotorcycleSpeedometer/: .gitignore  Cargo.toml  openocd.cfg  openocd.gdb
MotorcycleSpeedometer-MCU/: .cproject  .project  MotorcycleSpeedometer-MCU Debug.launch  STM32F103ZGTX_FLASH.ld  STM32F303ZETX_FLASH.ld  main.c
MotorcycleSpeedometer-MCU - Copy/: .cproject  .project  MotorcycleSpeedometer-MCU Debug.launch  main.c
MotorcycleSpeedometer-MCU-Rust/: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
MotorcycleSpeedometer-MCU-Rust/.cargo/: config
MotorcycleSpeedometer-MCU-Rust/src/: config.rs  main.rs
MotorcycleSpeedometer-MCU-Rust/src/drivers/: button.rs  clock.rs  debug.rs  mod.rs  touch.rs
MotorcycleSpeedometer-MCU-Rust/src/drivers/app/: app.rs  mod.rs
MotorcycleSpeedometer-MCU-Rust/src/drivers/lcd/: font.rs  images.rs  lcd.rs  lcd_api.rs  mod.rs  st7789.rs
MotorcycleSpeedometer-MCU-Rust/src/mcu/: gpio.rs  i2c.rs  input.rs  mod.rs  rtc.rs  spi.rs  timer.rs
MotorcycleSpeedometer-PCB/: MotorcycleSpeedometer-PCB-cache.lib  MotorcycleSpeedometer-PCB.sch
MotorcycleSpeedometer-PCB-Eagle/: PCB.brd  Schematic.sch  eagle.epf
MotorcycleSpeedometer-PCB-KiCad/: External.sch  External.sch-bak  Leds.sch-bak  Mcu.sch  Mcu.sch-bak  MotorcycleSpeedometer-cache.lib  MotorcycleSpeedometer.pro  MotorcycleSpeedometer.sch
MotorcycleSpeedometer/src/: app.rs  config.rs  main.rs
MotorcycleSpeedometer/src/drivers/: fuel.rs  lcd.rs  mod.rs  odometer.rs  quadalpha.rs  speedometer.rs
MotorcycleSpeedometer/src/mcu/: adc.rs  counter.rs  eusci.rs  gpio.rs  input.rs  mod.rs  nvic.rs  rtc.rs  systick.rs  timer.rs  wdt.rs
PCB/: MotorcycleSpeedometer-PCB-cache.lib  MotorcycleSpeedometer-PCB.kicad_pcb  MotorcycleSpeedometer-PCB.kicad_pcb-bak  MotorcycleSpeedometer-PCB.pro  (+2 more)
(+35 files in other folders)
