[package]
authors = ["Taylor Spencer <tayspen72@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"


[features]
device = []

[dependencies]
cortex-m = "0.7.1"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"

[dependencies.nrf52832-pac]
version = "0.9.0"
features = ["rt"]

[dependencies.cortex-m-rt]
version = "0.6.13"
features = ["device"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
