[package]
authors = ["Taylor Spencer <tayspen72@gmail.com>"]
edition = "2018"
name = "app"
version = "0.1.0"

[features]
device = []

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = { version = "0.6.14", features = ["device"] }
# msp432p401r_pac = { path = "../../msp432p401r-pac/.", version = "*", features = ["rt"] }
msp432p401r_pac = { git = "https://github.com/tayspen72/msp432p401r-pac", features = ["rt"] }
panic-halt = "0.2.0"

[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
